compiler/testData/asJava/lightClasses/compilationErrors/ExpectClass.kt
// p.B
// FIR_COMPARISON

package p

expect class B